# clip-vanish

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs  clipVanish_prd.md  test_keyboard.rs
docs/: clipboard_clear_improvement.md
src/: cli.rs  clipboard.rs  config.rs  crypto.rs  keyboard.rs  main.rs  memory.rs  timer.rs
src/keyboard/platform/: linux.rs  macos.rs  mod.rs  windows.rs
